# poc-semantic-kernel

./: pyproject.toml
.devcontainer/: devcontainer.json
plugins/AgentSelector/: config.json  skprompt.txt
plugins/MathPlugin/: Math.py
resources/: EDGAR_2024_GHG_booklet_2024.xlsx  EDGAR_2024_GHG_booklet_2024_fossilCO2only.xlsx
src/: assistant-vision.py  basic-chat.py  file-search.py  grounding.py  kernel-strategies.py  planner.py  serialize-chat.py  tutor-validation.py
