[tool.poetry]
name = "poc-semantic-kernel"
version = "0.1.0"
description = ""
authors = ["Alexandre Saker <saker.alexandre@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
semantic-kernel = "^1.11.0"
python-dotenv = "^1.0.1"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
